--- a/Project/public/css/home.css
+++ b/Project/public/css/home.css
@@ -56,3 +56,52 @@ u{
     height: 350pt;
     filter:brightness(50%);
 }
+
+.card img{
+    height: 15rem;
+}
+
+.content-1{
+    margin-top: 1%;
+    margin-bottom: 1%;
+    margin-right: 20%;
+    margin-left: 20%;
+    padding: 0.25rem;
+    border-radius: 0.25rem;
+}
+
+.CTitle{
+    color: black;
+}
+
+.card{
+    width:20%;
+    border-radius: 10%;
+}
+
+.card:hover{
+    transform: scale(1.05);
+    box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
+}
+
+#links{
+    text-decoration: none;
+}
+
+.searchBox{
+    margin-left: 5%;
+    margin-right: 1%;
+}
+
+.searchBtn{
+    margin-right: 5%;
+}
+
+.msg{
+    text-align: center;
+    margin-top: 20px;
+}
+
+#links:hover{
+    color: white;
+}
